<resources>
    <string name="app_name">LatestLiftApplication</string>
    <string name="scan">扫描条形码</string>
    <string name="ble">连接蓝牙</string>
    <string name="disconnect">断开连接</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_title">电梯管理员登录界面</string>
    <string name="login_button">Login</string>
    <string name="welcome_title">WELCOME</string>
    <string name="app_state">使用说明</string>
    <string name="app_usage">登陆后，先扫描设备上的条形码，接下来连接蓝牙就可以获取采集器数据，当按钮从红色变为黄色，则说明可以上传</string>
    <string name="app_mail">联系邮箱</string>
    <string name="contact_mail">894873161@qq.com</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="task_id">获取任务单</string>
    <string name="taskid_title">可用任务单列表</string>
    <string name="distance">距离</string>
    <string name="voice">声音</string>
    <string name="accelarate">加速度</string>
    <string name="palstance">角速度</string>
    <string name="angle">角度</string>
    <string name="all_params">全部数据</string>
    <string name="running_status">运行状态</string>
    <string name="error_info">故障信息</string>
    <string name="test_connection">测试连接</string>
    <string name="reset_data">清除数据</string>
    <string name="upload_data">上传数据</string>
    <string name="history_data">历史数据</string>
    <string name="scan_device">扫描设备</string>
    <string name="stop_scan_device">停止扫描</string>
    <string name="running_info_title">运行状态信息</string>
    <string name="error_info_title">故障状态信息</string>
    <string name="info_cancel">取消更改</string>
    <string name="info_sure">确认更改</string>
    <string name="lift_id">设备编号</string>
    <string name="submit_history_number">确定</string>
    <string name="history_title">获取历史数据</string>
    <string name="history_number">请输入0至255获取数据</string>
    <string name="store_user_pass">保存用户名和密码</string>
    <string name="upload_title">上传数据内容</string>
    <string name="upload_ensure">确定上传</string>
    <string name="upload_cancel">取消上传</string>

</resources>
