<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/history_title"
        android:gravity="center"
        android:text="@string/history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/history_number"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/history_number"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/submit_history_number"
            android:text="@string/submit_history_number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</LinearLayout>