<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/upload_title"
            android:gravity="center"
            android:textSize="24sp"
            android:background="#47f392"
            android:text="@string/upload_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/upload_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:id="@+id/upload_cancel"
            android:text="@string/upload_cancel"
            android:textColor="#5624ad"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:id="@+id/upload_ensure"
            android:text="@string/upload_ensure"
            android:textColor="#239812"
            android:background="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>