<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/info_list_title"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="serif-monospace"
            android:background="#00ff00"
            android:text="@string/running_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/running_info_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:id="@+id/running_info_cancel"
            android:text="@string/info_cancel"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/running_info_sure"
            android:text="@string/info_sure"
            android:layout_gravity="bottom"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>