<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.product.xxd.latestliftapplication.LoginActivity">

    <!--toolbar的引用-->
    <include layout="@layout/toolbar"/>
    <!--欢迎界面-->
    <LinearLayout
        android:id="@+id/welcome_section"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/welcome_title"
            android:textSize="40sp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="#83e5a4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <!--用户名以及密码区域-->
    <RelativeLayout
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputuser"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:hint="@string/username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>


        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputpass"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textinputuser"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_below="@id/textinputpass"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
